sumo/tests/duarouter/trips/errors/vehicle_false_departlane/errors.duarouter
Error: Invalid departLane definition for vehicle '0';
 must be one of ("random", "free", "allowed", "best", "first", or an int>=0)
Quitting (on error).
